--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+# Ignore everything in this directory
+*
+# Except this file
+!.gitignore
+
 ### STS ###
 .apt_generated
 .classpath
