--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,19 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
         <module>rpc-common</module>
         <module>rpc-server</module>
     </modules>
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha0</version>
+    <dependencyManagement>
+        <dependencies>
+            <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.3.0-alpha0</version>
 
-        </dependency>
+            </dependency>
 
-    </dependencies>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
