--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modules>
         <module>rpc-common</module>
         <module>rpc-server</module>
+        <module>rpc-client</module>
     </modules>
     <dependencyManagement>
         <dependencies>
