--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>kryo</artifactId>
             <version>4.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
     </dependencies>
 
     <build>
