--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -33,6 +33,16 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <version>1.2.76</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.0-alpha0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.etcd</groupId>
+            <artifactId>jetcd-core</artifactId>
+            <version>0.5.7</version>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
