--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
         </dependency>
+        <dependency>
+            <groupId>io.etcd</groupId>
+            <artifactId>jetcd-core</artifactId>
+            <version>0.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
