--- a/rpc-client/pom.xml
+++ b/rpc-client/pom.xml
@@ -17,6 +17,22 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.63.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.zl.zxrpc</groupId>
+			<artifactId>rpc-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.3.0-alpha0</version>
+		</dependency>
 
 	</dependencies>
 
