--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,22 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
                 <artifactId>logback-classic</artifactId>
                 <version>1.3.0-alpha0</version>
             </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.esotericsoftware.kryo</groupId>-->
+<!--                <artifactId>kryo5</artifactId>-->
+<!--                <version>5.1.0</version>-->
+<!--            </dependency>-->
+
+<!--            <dependency>-->
+<!--                <groupId>com.esotericsoftware</groupId>-->
+<!--                <artifactId>kryo</artifactId>-->
+<!--                <version>5.1.1</version>-->
+<!--            </dependency>-->
+
             <dependency>
-                <groupId>com.esotericsoftware.kryo</groupId>
-                <artifactId>kryo5</artifactId>
-                <version>5.1.0</version>
+                <groupId>com.esotericsoftware</groupId>
+                <artifactId>kryo-shaded</artifactId>
+                <version>4.0.2</version>
             </dependency>
 
         </dependencies>
