--- a/rpc-client/pom.xml
+++ b/rpc-client/pom.xml
@@ -23,6 +23,12 @@
 			<version>4.1.63.Final</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>de.javakaffee</groupId>-->
+<!--			<artifactId>kryo-serializers</artifactId>-->
+<!--			<version>0.45</version>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>cn.zl.zxrpc</groupId>
 			<artifactId>rpc-common</artifactId>
@@ -33,7 +39,29 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.3.0-alpha0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.etcd</groupId>
+			<artifactId>jetcd-core</artifactId>
+			<version>0.5.7</version>
+		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>de.javakaffee</groupId>-->
+<!--			<artifactId>kryo-serializers</artifactId>-->
+<!--			<version>0.45</version>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo-shaded</artifactId>
+			<version>4.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
