--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -37,11 +37,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
-        <dependency>
-            <groupId>de.javakaffee</groupId>
-            <artifactId>kryo-serializers</artifactId>
-            <version>0.45</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>de.javakaffee</groupId>-->
+<!--            <artifactId>kryo-serializers</artifactId>-->
+<!--            <version>0.45</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.javassist</groupId>
@@ -51,9 +51,21 @@
             <optional>true</optional>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.esotericsoftware</groupId>-->
+<!--            <artifactId>kryo</artifactId>-->
+<!--            <version>4.0.2</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>com.esotericsoftware</groupId>-->
+<!--            <artifactId>kryo</artifactId>-->
+<!--            <version>5.1.1</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.esotericsoftware</groupId>
-            <artifactId>kryo</artifactId>
+            <artifactId>kryo-shaded</artifactId>
             <version>4.0.2</version>
         </dependency>
 
