--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <artifactId>zxrpc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>zxrpc</name>
-    <description>Demo project for Spring Boot</description>
+    <packaging>pom</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
