--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -10,6 +10,7 @@ http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>pom</packaging>
     <groupId>cn.zl.zxrpc</groupId>
     <artifactId>rpc-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
